--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 	},
 	"dependencies": {
 		"react": "^19.1.1",
-		"react-dom": "^19.1.1"
+		"react-dom": "^19.1.1",
+		"react-router": "^7.9.1"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "2.2.4",
 		"@cloudflare/vite-plugin": "^1.13.1",
 		"@eslint/js": "^9.33.0",
 		"@types/react": "^19.1.10",
