--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"lint": "eslint .",
 		"preview": "npm run build && vite preview",
 		"deploy": "npm run build && wrangler deploy",
-		"cf-typegen": "wrangler types"
+		"cf-typegen": "wrangler types",
+		"lint": "biome check",
+		"lint:fix": "biome check --fix"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.13",
@@ -21,16 +22,11 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.2.4",
 		"@cloudflare/vite-plugin": "^1.13.1",
-		"@eslint/js": "^9.33.0",
 		"@types/react": "^19.1.10",
 		"@types/react-dom": "^19.1.7",
 		"@vitejs/plugin-react": "^5.0.0",
-		"eslint": "^9.33.0",
-		"eslint-plugin-react-hooks": "^5.2.0",
-		"eslint-plugin-react-refresh": "^0.4.20",
 		"globals": "^16.3.0",
 		"typescript": "~5.8.3",
-		"typescript-eslint": "^8.39.1",
 		"vite": "^7.1.2",
 		"wrangler": "^4.37.0"
 	}
